updated all code

--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -167,7 +167,7 @@ body {
     font-size: var(--bodyXSmal);
 }
 .hero-bg{
-    background: url("../img/hero-bg.svg");
+    background: url("../img/her0-2.jpg");
     background-size: cover;
     min-height: 80vh;
 }
